<resources>
    <string name="app_name">PUG</string>
    <string name="pick_up_games">ick</string>
    <string name="desc">Working life is a mess</string>
    <string name="cool_stuff">But with PUG it has never been easier to get active</string>
    <string name="get_started">GET STARTED</string>

    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="logout">logout</string>
    <string name="upcoming_activities">UPCOMING\nACTIVITIES</string>
    <string name="desc_upcoming_activities">What you have to look forward to</string>
    <string name="new_activities">NEW\nACTIVITIES</string>
    <string name="desc_new_activities">You might be interested to join these</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_activities">YOUR ACTIVITIES</string>
    <string name="events_you_organized">Events you organized</string>
    <string name="past_activities">PAST ACTIVITIES</string>
    <string name="age">Age</string>
    <string name="username">Username</string>
    <string name="username_or_email">Username or email</string>
    <string name="up_games">p</string>
    <string name="games">ames</string>
    <string name="u">U</string>
    <string name="p">P</string>
    <string name="g">G</string>
    <string name="participants">Participants</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="confirm">CONFIRM</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="select_sport">Select Sport...</string>
    <string name="organise_activity">Organise Activity...</string>
</resources>