<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:background="@drawable/ic_login_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:text="@string/login"
        style="@style/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background" />

    <View
        android:id="@+id/myRectangleView1"
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="4dp"
        style="@style/line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="102dp"
        android:text="@string/sign_up"
        style="@style/fade_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background" />

    <View
        android:id="@+id/myRectangleView2"
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="76dp"
        style="@style/fade_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userId"
        android:layout_marginTop="68dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        style="@style/user_text_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwd"
        android:hint="@string/password"
        android:inputType="textPassword"
        style="@style/user_text_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userId" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCV"
        style="@style/button_cardview"
        app:cardBackgroundColor="@color/colorRed"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwd">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login"
            android:text="@string/sign_in"
            style="@style/word_button_style" />
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress"
        style="@style/progressbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>